# render_demo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  render_demo.code-workspace
shader/: lighting.frag  lighting.vert
src/: BufferObject.cpp  BufferObject.h  Camera.h  CmdOpBase.h  CmdOpDrawFrame.h  CmdOpUpload.h  CmdSyncDevice.h  DescriptorLayoutConfig.h  DescriptorStructs.h  DeviceResource.cpp  DeviceResource.h  DeviceResourceUtIls.cpp  DeviceResourceUtils.h  GLFWwindow.cpp  GLFWwindow.h  GraphicsDebugger.cpp  GraphicsDebugger.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IUnifiedWindow.h  ImageAttachment.cpp  ImageAttachment.h  ImageResources.cpp  ImageResources.h  LoopSequence.cpp  LoopSequence.h  MemoryObject.cpp  MemoryObject.h  MeshBuffer.cpp  MeshBuffer.h  MyRenderPass.cpp  MyRenderPass.h  OnceSequence.cpp  OnceSequence.h  PhysicalDeviceUtils.cpp  PhysicalDeviceUtils.h  RenderManager.cpp  RenderManager.h  RenderPass.cpp  RenderPass.h  (+10 more)
